<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_fond">

        <!-- Bloc parent centré -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signupContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp">

            <!-- Titre Photo de profil -->

            <!-- Champ Photo de profil -->
            <ImageView
                android:id="@+id/ivProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Champ Nom complet -->
            <EditText
                android:id="@+id/etFullName"
                style="@style/FormField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Nom complet (Prénom et Nom)"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/ivProfilePicture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"/>

            <!-- Champ Adresse e-mail professionnel -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                style="@style/FormField"
                android:layout_height="wrap_content"
                android:hint="Adresse e-mail professionnel"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/etFullName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"/>

            <!-- Champ Numéro de téléphone -->
            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Numéro de téléphone"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@id/etEmail"
                style="@style/FormField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"/>

            <!-- Champ Numéro d'ordre professionnel -->
            <EditText
                android:id="@+id/etProfessionalNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/FormField"
                android:hint="Numéro d'ordre professionnel"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/etPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"/>

            <!-- Champ Mot de passe -->
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/FormField"
                android:hint="Mot de passe"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/etProfessionalNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"/>

            <!-- Champ Confirmation du mot de passe -->
            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Confirmer le mot de passe"
                style="@style/FormField"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"/>

            <!-- Champ Adresse professionnelle -->
            <EditText
                android:id="@+id/etWorkAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Adresse professionnelle"
                app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/FormField"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"/>

            <!-- Bouton Valider l'inscription -->
            <Button
                android:id="@+id/btnSubmit"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Valider l'inscription"
                app:layout_constraintTop_toBottomOf="@id/etWorkAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
